@@ -13,6 +13,9 @@ Bug fixes:
  - launchpad.py: Drop APPORT_FILES whitelist for download() and instead just
    filter out file extensions that we know about (*.txt and *.gz).
    (LP: #444975)
+ - launchpad.py: Do not put the Tags: field into the bug description, since
+   they are already proper tags. In download(), convert the real tags back to
+   the Tags: field. (LP: #505671)
 
 1.11 (2009-12-23)
 -----------------
